# ccn-tutorial

./: .gitignore  .nojekyll  README.md  _quarto.yml  index.html  index.qmd  pyproject.toml  references.bib  robots.txt  search.json  sitemap.xml
.github/workflows/: publish.yml
_extensions/add-code-files/: _extension.yml  add-code-files.lua
_extensions/black-formatter/: black-formatter.lua
_extensions/include-code-files/: _extension.yml  include-code-files.lua
notebooks/: aligning_neural_networks.ipynb  analyzing_neural_networks.ipynb  comparing_representations.ipynb  dealing_with_noise.ipynb  deep_neural_networks.ipynb  exploring_neural_data.ipynb  introducing_pca.ipynb  reference.ipynb
pages/: aligning_neural_networks.html  aligning_neural_networks.ipynb  aligning_neural_networks.qmd  analyzing_neural_networks.html  analyzing_neural_networks.ipynb  analyzing_neural_networks.qmd  bibliography.bib  comparing_representations.html  comparing_representations.ipynb  comparing_representations.qmd  dealing_with_noise.html  dealing_with_noise.ipynb  dealing_with_noise.qmd  deep_neural_networks.html  deep_neural_networks.ipynb  deep_neural_networks.qmd  exploring_neural_data.html  exploring_neural_data.ipynb  exploring_neural_data.qmd  introducing_pca.html  introducing_pca.qmd  reference.html  reference.ipynb  reference.qmd
pages/_code/: initialize_rng.qmd  install_package.qmd  set_visualization_defaults.qmd  visualization_defaults.qmd
scripts/: move_jupyter_notebooks.py  move_notebooks.py  standardize_jupyter_notebook_cell_ids.py
site_libs/bootstrap/: bootstrap-dark.min.css  bootstrap.min.css
src/utilities/: brain.py  computation.py  model.py  toy_example.py
src/utilities/toy_example/: neurons.py
(+3 files in other folders)
